welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:3: error: type mismatch;
 found   : String("EST")
 required: Boolean
	var "EST"=false;
            ^SnakeBuggle:4: error: type mismatch;
 found   : String("OUEST")
 required: Boolean
	var "OUEST"=false;
            ^SnakeBuggle:6: error: not found: value OUEST
		if (OUEST==true) {
                    ^SnakeBuggle:17: error: not found: value EST
		if (EST==true) {
                    ^SnakeBuggle:17: error: type mismatch;
 found   : Unit
 required: Boolean
		if (EST==true) {
                ^SnakeBuggle:39: error: not found: value EST
		else if (EST) {
                         ^SnakeBuggle:44: error: not found: value OUEST
		else if (OUEST) {
                         ^SnakeBuggle:54: error: not found: value EST
			EST=false;
                        ^SnakeBuggle:55: error: not found: value OUEST
			OUEST=true;
                        ^SnakeBuggle:58: error: not found: value OUEST
			OUEST=false;
                        ^SnakeBuggle:59: error: not found: value EST
			EST=true;
                        ^